2007-03-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp
	(openvrml_player_request_data_available(GIOChannel *,
	GIOCondition, gpointer)): Set CURLOPT_FAILONERROR to "true" for
	easy handles.

2007-03-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp
	(main(int, char *[])): Call g_set_application_name.

2007-03-13 Braden McDaniel  <braden@endoframe.com>

	Use GLib-style return-if-fail macros for most of libcurl error
	handling.

	* src/openvrml-player/player.cpp
	(OPENVRML_PLAYER_CURL_EASY_RETURN_VAL_IF_ERROR): Added macro.
	(OPENVRML_PLAYER_CURL_MULTI_RETURN_IF_ERROR): Added macro.
	(OPENVRML_PLAYER_CULR_MULTI_RETURN_VAL_IF_ERROR): Added macro.
	(reset_fds(CURLSource &)): Check result of curl_multi_fdset with
	OPENVRML_PLAYER_CURL_MULTI_RETURN_IF_ERROR.
	(openvrml_player_curl_source_callback(gpointer)): Check result of
	curl_multi_remove_handle with
	OPENVRML_PLAYER_CURL_MULTI_RETURN_VAL_IF_ERROR.
	(openvrml_player_request_data_available(GIOChannel *,
	GIOCondition, gpointer)): Check result of curl_easy_setopt with
	OPENVRML_PLAYER_CURL_EASY_RETURN_VAL_IF_ERROR; check result of
	curl_multi_add_handle with
	OPENVRML_PLAYER_CURL_MULTI_RETURN_VAL_IF_ERROR.

2007-03-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(openvrml_jpeg_fill_input_buffer(j_decompress_ptr)): Guard against
	the possibility that this function is called when the number of
	bytes in the backtrack buffer should remain zero.

2007-03-06 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Set SHOW_INCLUDE_FILES to YES; required to show
	what header file a class is defined in.

2007-03-06 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/event.h